--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h1{
 footer{
     background-color: aquamarine;
     display: flex;
+    flex-direction: column;
     min-height: 15vh;
     width: 100%;
     justify-content: center;
