--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,51 @@ h1{
     width: 90%;
     margin-bottom: 1.5vh;
 }
+#c-2{
+    flex: 1;
+}
+button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    height: 8vw;
+    max-height: 60px;
+}
+button img{
+    height: 100%;
+}
+.btn-container{
+    display: flex;
+    /*width: 50%;*/
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    gap: 3vw;
+}
+#btn-c-1{
+    background: greenyellow;
+    max-width: 30%;
+}
+#btn-c-1 button{
+    width: 30px;
+    border: 0 solid ;
+    border-radius: 100%;
+}
+button:hover{
+    background: coral;
+}
+#btn-c-2{
+    background: rgb(187, 78, 214);
+}
+#vel-dial{
+    width: 12vw;
+}
+#vel-dial input{
+    width: 100%;
+}
 #Board{
     min-width: 0;   
     max-height: 72.5vh;
@@ -33,6 +78,5 @@ footer{
     flex-direction: column;
     min-height: 15vh;
     width: 100%;
-    justify-content: center;
     align-items: center;
 }
