--- a/styles.css
+++ b/styles.css
@@ -1,82 +1,86 @@
-html, body {
-    height: 100%;
+html,body{
     margin: 0;
     padding: 0;
-  }
-header{
-        width: 100%;
-        max-height: 10vh;
 }
-h1{
-    text-align: center;
-    font-size: 1.8em;
-}
-.display-canvas{
+#display-canvas{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+
     max-height: 100vh;
+}
+.container{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.container{
+/*Containers*/
+header{
+    /*flex: 1;*/
+    height: 10vh;
+    justify-content: center;
+    background: yellowgreen;
+}
+h1{
+    font-size: clamp(10px,7vh,40px);
+}
+#game-of-life{
+    /*flex: 8;*/
+    margin: 1vh 0;
+    background: violet;
+}
+#Board{
+    min-width: 0;
+    max-width: 90%;
+    max-height: 71vh;
+}
+footer{
+    /*flex: 1;*/
+    height: 17vh;
+    justify-content: flex-end;
+    background: slateblue;
+    position: relative;
+}
+footer p{
+    position: absolute;
+    margin: 0;
+    top: 0;
+    font-size: 3vh;
+    min-height: 0;
+}
+#container-2{
     display: flex;
     justify-content: center;
-    width: 90%;
-    margin-bottom: 1.5vh;
-}
-#c-2{
-    flex: 1;
-}
-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    height: 8vw;
-    max-height: 60px;
-}
-button img{
     height: 100%;
+    width: 90%;
 }
 .btn-container{
     display: flex;
-    /*width: 50%;*/
-    flex: 1;
-    justify-content: center;
+    position: absolute;
+    bottom: 0;
     align-items: center;
-    gap: 3vw;
+    justify-content: center;
+    width: 80%;
+    margin-bottom: 1vh;
+    gap:4vh
 }
-#btn-c-1{
-    background: greenyellow;
-    max-width: 30%;
+#vel-dial{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-#btn-c-1 button{
-    width: 30px;
-    border: 0 solid ;
-    border-radius: 100%;
+#vel-dial span{
+    font-size: max(12px, 3.5vh);
+}
+button{
+    /*height: 6vh;*/
+    display: flex;
+    border: 0;
 }
 button:hover{
     background: coral;
 }
-#btn-c-2{
-    background: rgb(187, 78, 214);
-}
-#vel-dial{
-    width: 12vw;
-}
-#vel-dial input{
-    width: 100%;
-}
-#Board{
-    min-width: 0;   
-    max-height: 72.5vh;
-}
-footer{
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: column;
-    min-height: 15vh;
-    width: 100%;
-    align-items: center;
+button img,svg{
+    height: clamp(20px,11vh,60px);
+    width: clamp(20px,11vh,8vw);
 }
